{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Movement",
            "id": "19c319cc-9336-4094-8088-b4c95753cdcb",
            "actions": [
                {
                    "name": "MovePosition",
                    "type": "Value",
                    "id": "358c45fc-0d6e-48f0-8382-9ef498b0dc0b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveClick",
                    "type": "Button",
                    "id": "c166be95-dbd8-41e6-8b15-9b828400886c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cdce0e88-f5dd-48f9-8a02-a3d575437110",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0134a1f-0bdd-416c-8435-3251abea22d8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}